# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: Coverage.yml  linter.yml  pytest.yml
gendiff/: Parser.py  format_json.py  format_plain.py  format_stylish.py  gendiff.py  make_diff.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_make_diff.py
tests/fixtures/: diff.txt  json_args.txt  plain_args.txt  r_diff.txt  r_json_args.txt  reverse_r_json_args.txt  yml_args.txt
